--- a/bower.json
+++ b/bower.json
@@ -11,15 +11,31 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.1",
-    "angular-route": "~1.3.1",
-    "angular-cookies": "~1.3.1",
-    "angular-animate": "~1.3.1",
-    "angular-resource": "~1.3.1",
-    "bootstrap": "~3.3.0",
-    "bootstrap-material-design": "~0.1.5",
-    "jquery": "~2.1.1",
-    "ngDialog": "~0.3.3",
-    "underscore": "~1.7.0"
+    "bootstrap": "~3.3.6",
+    "angular-bootstrap-slider": "~0.1.21",
+    "leaflet": "~0.7.7",
+    "nvd3": "~1.8.1",
+    "angular-nvd3": "~1.0.3",
+    "ngInfiniteScroll": "~1.2.1",
+    "angular-cookies": "~1.4.8",
+    "angulartics": "~0.20.2",
+    "angulartics-google-analytics": "~0.1.2",
+    "angular-route": "~1.4.8",
+    "angular-animate": "~1.4.7",
+    "angular-resource": "~1.4.8",
+    "angular-auto-focus": "~1.0.4",
+    "angular-breadcrumb": "~0.4.1",
+    "angular-cors-ie9": "*",
+    "angular": "~1.4.8",
+    "d3": "~3.5.10",
+    "jquery": "~2.1.4",
+    "seiyria-bootstrap-slider": "~5.3.1",
+    "underscore": "~1.8.3",
+    "ng-dialog": "ngDialog#~0.5.6",
+    "angular-ui-router": "~0.2.15",
+    "bower": "*",
+    "install": "~1.0.4",
+    "leaflet.markercluster": "~0.4.0",
+    "angular-leaflet-directive": "~0.10.0"
   }
 }
