--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "angular-bootstrap-slider": "~0.1.21",
     "leaflet": "~0.7.7",
     "nvd3": "~1.8.1",
-    "angular-nvd3": "~1.0.4",
+    "angular-nvd3": "1.0.2",
     "ngInfiniteScroll": "~1.2.1",
     "angular-cookies": "~1.4.8",
     "angulartics": "~0.20.2",
