--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,7 @@
     "bower": "*",
     "install": "~1.0.4",
     "leaflet.markercluster": "~0.4.0",
-    "angular-leaflet-directive": "~0.10.0"
+    "angular-leaflet-directive": "~0.10.0",
+    "angular-tooltips": "^1.1.4"
   }
 }
