--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "leaflet": "~0.7.7",
     "nvd3": "~1.8.1",
     "angular-nvd3": "~1.0.4",
-    "ngInfiniteScroll": "~1.2.1",
+    "ngInfiniteScroll": "#1.2.1",
     "angular-cookies": "~1.4.8",
     "angulartics": "~0.20.2",
     "angulartics-google-analytics": "~0.1.2",
